--- a/style.css
+++ b/style.css
@@ -3,14 +3,24 @@
   padding: 0;
   box-sizing: border-box;
   --orange: #fcae61;
-  --blue: #2601f9;
+  --dark-blue: #2601f9;
   --grey: #616368;
   --dark-grey: #242f50;
   --light-grey: #e2eaed;
+  --red: #f55767;
+  --green: #40975f;
+  --title: #242f51;
+  --blue: #2563ff;
+}
+html {
+  scroll-behavior: smooth;
 }
 @font-face {
   font-family: "Poppins", sans-serif;
   src: url(https://fonts.google.com/specimen/Poppins?query=poppin&sidebar.open=true&selection.family=Poppins:wght@400;500;600;700);
+}
+li {
+  list-style: none;
 }
 a {
   text-decoration: none;
@@ -20,16 +30,19 @@ body {
   font-family: "Poppins";
   color: var(--grey);
   background: url("./images/Vector Smart Object.png");
-  background-size: 1200px;
+  background-size: cover;
 }
 .header {
   position: fixed;
+  top: 0;
   width: 100%;
-  padding-top: 50px;
+  padding: 50px 0;
   z-index: 100;
+  transition: 0.3s;
 }
 .container {
-  max-width: 1170px;
+  max-width: 1440px;
+  height: 100%;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -53,64 +66,84 @@ body {
 }
 .header__item {
   margin-right: 30px;
+  transition: all 0.3s ease-in;
+}
+.header__item:hover {
+  color: var(--dark-blue);
 }
 .btn {
+  display: block;
+  min-width: 100px;
   background-color: var(--blue);
   border-radius: 50px;
   padding: 16px 40px;
   color: #fff;
+  max-width: fit-content;
+  transition: all 0.3s ease-in-out;
+}
+.btn:hover {
+  background-color: var(--dark-blue);
+  box-shadow: 0 2px 20px -11px rgba(0, 0, 255, 1);
 }
 /* Главная страница сайта */
 .main {
-  position: absolute;
-  top: 100px;
-  left: 0;
-  right: 0;
-  height: 100vh;
+  height: 800px;
   background: url("./images/city.png");
   background-repeat: no-repeat;
   background-position-y: 100%;
+  margin-top: 100px;
+  z-index: 1;
 }
 .container {
 }
+.title {
+  font-size: 60px;
+  font-weight: bold;
+  color: var(--title);
+}
+.subtitle {
+  font-size: 36px;
+  color: var(--title);
+}
+.text {
+  font-size: 18px;
+  color: var(--grey);
+}
 .main__wrapper {
   display: flex;
-  /* width: 70%; */
   padding: 0 70px;
   margin: auto;
   background: url(./images/Layer\ 3.png);
+  z-index: 1;
 }
 .main__content {
   margin: auto 0;
 }
-.main__content span {
+.main__item {
   display: flex;
   background: var(--light-grey);
   width: fit-content;
   height: 35px;
   position: relative;
-  padding: 0 50px;
   border-radius: 20px;
   align-items: center;
   font-size: 18px;
   color: var(--dark-grey);
   margin-bottom: 10px;
+  justify-content: space-between;
 }
-.main__content span svg {
+.main__item i {
   height: 100%;
   width: 40px;
-  padding: 5px;
   border-radius: 20px;
   background: var(--orange);
-  position: absolute;
-  top: 50%;
-  left: 20px;
-  transform: translate(-50%, -50%);
+  font-size: 22px;
+  color: #ffffff;
 }
-.main__content h1 {
-  font-size: 60px;
-  font-weight: bold;
-  color: var(--dark-grey);
+.main__item span {
+  padding: 0 50px 0 10px;
+}
+.main__content .title {
   line-height: 80px;
   margin-bottom: 30px;
 }
@@ -118,15 +151,271 @@ body {
   margin-bottom: 50px;
 }
 .main__links {
-  /* margin: 30px 0; */
+  display: flex;
+  align-items: center;
 }
-.btn {
+.main__links .btn:hover {
+  transform: translateY(-5px);
 }
 .video__link {
   color: var(--blue);
   margin-left: 25px;
 }
+.video__link:hover {
+  color: var(--dark-blue);
+}
 .main__image {
   margin-left: 100px;
   height: 85vh;
+}
+
+.partners {
+  text-align: center;
+}
+.partners__wrapper {
+  padding: 110px 0;
+}
+.partners__inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.partners__item {
+  margin: 30px;
+}
+
+.features {
+}
+.features__wrapper {
+  display: flex;
+}
+.parallax {
+  position: relative;
+  width: 50%;
+  height: 100vh;
+  overflow: hidden;
+}
+.parallax__phone {
+  position: absolute;
+  left: -100px;
+  background-image: url("./images/phone.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 300px;
+  width: 100%;
+  height: 100%;
+  transform: 0.2s;
+}
+.parallax__phone2 {
+  position: absolute;
+  background-image: url("./images/phone2.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 300px;
+  width: 100%;
+  height: 100%;
+  transform: 0.2s;
+}
+.features__image {
+  width: 50%;
+  height: auto;
+}
+.features__content {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 100px 0 50px;
+}
+.features__content .subtitle {
+  line-height: 40px;
+  margin-bottom: 10px;
+}
+.features__list {
+  margin-top: 40px;
+}
+.features__item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.bi {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  transition: 0.3s ease-in-out;
+  font-size: 35px;
+  margin-bottom: 20px;
+}
+.features__item span {
+  display: block;
+  font-size: 1.1em;
+  margin-bottom: -20px;
+}
+.bi-speedometer {
+  color: var(--red);
+  background-color: rgb(255, 0, 0, 0.1);
+}
+.features__item:first-child:hover .bi-speedometer {
+  color: #ffffff;
+  background-color: var(--red);
+}
+.features__item:first-child span {
+  color: var(--red);
+}
+.bi-layout-wtf {
+  color: #2563ff;
+  background-color: rgb(0, 0, 255, 0.1);
+}
+.features__item:nth-child(2):hover .bi-layout-wtf {
+  color: #ffffff;
+  background-color: var(--blue);
+}
+.features__item:nth-child(2) span {
+  color: var(--blue);
+}
+.bi-bezier {
+  color: #40975f;
+  background-color: rgb(0, 255, 0, 0.1);
+}
+.features__item:last-child:hover .bi-bezier {
+  color: #ffffff;
+  background-color: #40975f;
+}
+.features__item:last-child span {
+  color: var(--green);
+}
+.features__item p {
+  width: 60%;
+  margin-left: 20px;
+}
+.jackpots {
+}
+.container {
+}
+.jackpots__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px 100px;
+}
+.jackpots__row h2,
+.jackpots__row p {
+  width: 40%;
+}
+.jackpots__list {
+  display: flex;
+  padding: 50px;
+}
+.jackpots__item {
+  padding: 0 50px;
+}
+.bi {
+  margin-bottom: 20px;
+}
+.bi-credit-card-2-front,
+.bi-globe2,
+.bi-bookmark-star {
+}
+.jackpots__item span {
+  display: block;
+  font-size: 1.1em;
+  margin-bottom: -15px;
+}
+.bi-credit-card-2-front {
+  color: var(--red);
+  background-color: rgb(255, 0, 0, 0.1);
+}
+.jackpots__item:first-child:hover .bi-credit-card-2-front {
+  color: #ffffff;
+  background-color: var(--red);
+}
+.jackpots__item:first-child span {
+  color: var(--red);
+}
+.bi-globe2 {
+  color: #2563ff;
+  background-color: rgb(0, 0, 255, 0.1);
+}
+.jackpots__item:nth-child(2):hover .bi-globe2 {
+  color: #ffffff;
+  background-color: var(--blue);
+}
+.jackpots__item:nth-child(2) span {
+  color: var(--blue);
+}
+.bi-bookmark-star {
+  color: #40975f;
+  background-color: rgb(0, 255, 0, 0.1);
+}
+.jackpots__item:last-child:hover .bi-bookmark-star {
+  color: #ffffff;
+  background-color: #40975f;
+}
+.jackpots__item:last-child span {
+  color: var(--green);
+}
+hr {
+  height: 150px;
+  border: 1px solid var(--grey);
+  border-radius: 50px;
+  opacity: 0.3;
+}
+
+/*---------------integration--------------- */
+.integration {
+  height: 100vh;
+}
+.integration__wrapper {
+  height: 100%;
+  display: flex;
+  align-items: center;
+	justify-content: space-evenly;
+  /* background-color: #368; */
+}
+.integration__wrapper img {
+	width: 40%;
+}
+.integration__content {
+	width: 40%;
+}
+.integration__content h2 {
+	width: 70%;
+	margin-bottom: 15px;
+}
+.integration__content p {
+	width: 90%;
+	margin-bottom: 40px;
+}
+/*---------------advantages--------------- */
+
+.advantages {
+}
+.advantages .subtitle,
+.advantages .text {
+  width: 50%;
+  margin: auto;
+  text-align: center;
+}
+.advantages__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.advantages__item {
+  width: 33%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 50px;
+}
+.advantages__item .text {
+  width: 100%;
+}
+.advantages__item span {
+  color: aqua;
 }
